# sc-bot

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  agent.py  config.py  logger.py  main.py  marker_data.sample.csv  pyproject.toml  system_prompt.py  tools.py
assets/: demo.tape  demo_aliases.tape  demo_exhausted_cd8.tape  demo_gene_list.tape
docs/: annotation_skill.md
examples/: assist_mode_template.md  fetch_mode_template.md
scripts/: ingest_cellmarker2.py  ingest_celltypist.py  ingest_marker_csv.py  ingest_panglao.py  ingest_sctype.py  setup_db.py  utils.py
src/sc_bot/: agent.py  annotation_guidance.py  cd_antigens.py  config.py  db_metadata.py  enrichr.py  logger.py  main.py  models.py  system_prompt.py  tools.py  tui.py
tests/: test_agent.py  test_cd_antigens.py  test_celltypist.py  test_main.py  test_sctype.py  test_tools.py  test_tui.py
