[project]
name = "sc-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.10",
    "pandas>=3.0.1",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "ruff>=0.15.4",
    "textual>=8.1.1",
]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
sc-bot = "sc_bot.main:main"

[tool.uv]
package = true
